# agno-mission-control-copilot-sdk

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mc  mcp_servers.yaml  pyproject.toml  workflows.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: AGENTS.md  HEARTBEAT.md  __init__.py  api.py  cli.py  config.py  scheduler_main.py  telegram_bot.py
agents/mission_control/: __init__.py  tools.py
agents/mission_control/core/: base_agent.py  copilot_model.py  database.py  factory.py  pr_check.py
agents/mission_control/core/migrations/: 001_add_mission_columns.sql
agents/mission_control/core/missions/: __init__.py  base.py  build.py  verify.py
agents/mission_control/learning/: capture.py  capture_old.py
agents/mission_control/mcp/: manager.py  mission_control_server.py  repo_scoped.py
agents/mission_control/scheduler/: heartbeat.py
agents/squad/friday/: agent.py
agents/squad/jarvis/: SOUL.md  agent.py
agents/squad/pepper/: SOUL.md
agents/squad/quill/: SOUL.md  agent.py
agents/squad/shuri/: SOUL.md
agents/squad/vision/: checks.py  healer.py  notify.py
agents/squad/wong/: SOUL.md
agents/static/: index.html  learning.html
docs/: CLOUD_PROVIDERS.md  CUSTOM_MISSIONS.md  MODEL_PROVIDERS.md
docs/learnings/: AGNO_FRAMEWORK.md  ARCHITECTURE.md  CODE_PATTERNS.md  COPILOT_SDK_INTEGRATION.md  MCP_PATTERNS.md  README.md  TROUBLESHOOTING.md
examples/missions/: content-squad.yaml  custom-mission-template.yaml  dev-squad.yaml
infra/docker/: Dockerfile  docker-compose.yml  init.sql
infra/systemd/: mc-api.service  mc-bot.service  mc-mcp.service  mc-scheduler.service
src/mission_control/: api.py  cli.py  config.py  event_capture.py  paths.py  scheduler_main.py  setup_wizard.py  telegram_bot.py  telegram_human_review_notification.txt
src/mission_control/defaults/: env.example  workflows.yaml.default
src/mission_control/defaults/systemd/: mc-api.service  mc-bot.service
src/mission_control/mission_control/: AGENTIC_MONITORING_PLAN.md  tools.py
src/mission_control/mission_control/core/: actions.py  base_agent.py  copilot_model.py  database.py  db_init.py  factory.py  guards.py  pr_check.py  prompt_loader.py  workflow_loader.py
src/mission_control/mission_control/core/missions/: __init__.py  base.py  build.py  generic.py  verify.py
src/mission_control/mission_control/learning/: capture.py  capture_old.py  guard_monitor.py  processor.py
src/mission_control/mission_control/mcp/: manager.py  mission_control_server.py  registry.py  repo_scoped.py
src/mission_control/mission_control/scheduler/: heartbeat.py
src/mission_control/prompts/: build_dev.md  content_base.md  content_draft.md  content_promote.md  content_publish.md  content_research.md  content_review.md
src/mission_control/squad/friday/: SOUL.md  agent.py
src/mission_control/squad/fury/: SOUL.md
src/mission_control/squad/jarvis/: SOUL.md  agent.py
src/mission_control/squad/loki/: SOUL.md
src/mission_control/squad/quill/: agent.py
src/mission_control/squad/vision/: SOUL.md  checks.py  healer.py  notify.py  review_cycle.py
src/mission_control/squad/wanda/: SOUL.md
src/mission_control/static/: index.html
tests/: conftest.py  db_seed.py  test_e2e_build_mission.py  test_e2e_content_mission.py  test_e2e_conversation.py  test_integration_db.py  test_learning.py  test_mission_validation.py  test_observability.py  test_phase10a_foundation.py  test_phase7_learning_missions.py  test_phase8_mcp_always_run.py  test_phase9_packaging.py
